# postcard

./: .gitignore  .pre-commit-config.yaml  README.md  aws-architecture.md
.github/: pull_request_template.md
.github/workflows/: deploy-server.yml
client/: .env.example  .gitignore  README.md  bun.lockb  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json
client/amplify/: backend.ts
client/amplify/storage/: resource.ts
client/app/: actions.ts  globals.css  layout.tsx  manifest.ts  page.tsx
client/app/api-test/: page.tsx
client/app/auth/: page.tsx
client/components/: Navigation.tsx  PostCreator.tsx  PostcardDetailModal.tsx  PostcardMap.tsx  PushNotificationManager.tsx  install-prompt.tsx  push-notification.tsx
client/hooks/: usePushNotification.ts
client/public/: sw.js
client/src/: hey-api.ts
infra/: .gitignore  README.md  docker-compose.yml
lambda/: update-location.py
lambda/update_location/: location_calculate_minimal.py  update_location.py
scripts/: generate-vapid-keys.js
server/: .env.example  .gitignore  Dockerfile  README.md  auth.py  aws-deployment-guide.md  main.py  openapi.json  pyproject.toml
server/database/: __init__.py  base.py  client.py  collections.py  postcards.py  users.py
server/models/: __init__.py  collection.py  postcard.py  travel.py  user.py
server/routers/: collection.py  postcards.py  users.py
server/scripts/: generate_openapi.py
server/services/: sns_service.py
visualizer/: CLAUDE.md  constants.py  index.html  route_algorithm.py
visualizer/data/: cities_location.csv  city202507.csv
(+74 files in other folders)
