[project]
name = "server"
version = "0.1.0"
description = "this is server side app using fastapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "python-jose[cryptography]",
    "python-multipart",
    "requests",
    "pyjwt[crypto]",
    "python-dotenv",
]
